:bookmark: 8.3.6
Release 8.3.6.

Highlights:
- Update Core release and VERSION automation for name and allPublicConstructors